--- a/assets/style.css
+++ b/assets/style.css
@@ -38,6 +38,6 @@ p {
     width: 80%;
     margin: 40px auto;
     border: 5px solid  rgb(65, 6, 129);
-    box-shadow: 5px 10px #c2bc61;
+    box-shadow: 5px 10px #d5ce6b;
 }
 
